Update Italian translations

--- a/util/src/main/i18n/translations/misc_it_IT.properties
+++ b/util/src/main/i18n/translations/misc_it_IT.properties
@@ -6,21 +6,17 @@ misc.list.pair = {0} e {1}
 # start a list of 3 or more items
 # {0} = first item
 # {1} = second item
+misc.list.start = {0}, {1}
 
 # middle a list of 4 or more items
 # {0} = third item
 # {1} = fourth item
+misc.list.middle = {0}, {1}
 
 # end of a list of 3 or more items
 # {0} = second-to-last item
 # {1} = last item
 misc.list.end = {0}, e {1}
-
-# {0} = "1"
-misc.millisecond = {0} millisecondo
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisecondi
 
 # {0} = "1"
 misc.second = {0} secondo
@@ -31,20 +27,36 @@ misc.seconds = {0} secondi
 # {0} = "1"
 misc.minute = {0} minuto
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minuti
 
 # {0} = "1"
 misc.hour = {0} ora
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} ore
 
 # {0} = "1"
 misc.day = {0} giorno
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} giorni
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} fa
@@ -52,15 +64,19 @@ misc.timeAgo = {0} fa
 # {0} = duration (e.g. "1:00" for 1 minute left, "15:25" for 15 minutes and 25 seconds left)
 misc.timeRemaining = Tempo restante\: {0}
 
+misc.overtime = Overtime {0}
 
 # {0} = player name
 misc.createdBy = Creato da {0}
 
 # {0} = player name
+misc.by = di {0}
 
 # {0} = player name
+misc.and = e {0}
 
 # {0} = some map or gamemode name
+misc.playing = Stai Giocando\: {0}
 
 # {0} = something made by {1} (e.g. a map name)
 # {1} = player name
@@ -77,6 +93,7 @@ misc.point = {0} punto
 misc.points = {0} punti
 
 # {0} = "1"
+misc.life = {0} vita
 
 # {0} = number of lives
 misc.lives = {0} vite
@@ -90,17 +107,26 @@ misc.team = Squadra
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
+misc.or = {0} o {1}
 
 # do not translate, keep as-is
+misc.snowman = ☃
 
 misc.unknown = Sconosciuto
 
+misc.console = Console
 
+misc.on = Abilitato
 
+misc.off = Disattivato
 
+misc.to = A
 
+misc.from = Da
 
+misc.nextPage = Pagina successiva
 
+misc.previousPage = Pagina precedente
 
 misc.thankYou = Grazie.
 
@@ -112,17 +138,30 @@ misc.alert = Avviso
 
 misc.warning = ATTENZIONE
 
+misc.top = Alto
+
+misc.bottom = Basso
+
+misc.front = Anteriore
+
+misc.back = Indietro
+
+misc.rear = Posteriore
+
+misc.left = Sinistra
+
+misc.right = Destra
+
+misc.center = Centro
 
 
+misc.north = Nord
 
+misc.south = Sud
 
+misc.east = Est
 
-
-
-
-
-
-
+misc.west = Ovest
 
 # {0} = player name
 misc.teleportTo = Teletrasporto verso {0}
@@ -135,28 +174,43 @@ misc.editWand = Bacchetta di modifica
 misc.join = {0} è entrato nella partita
 
 # {0} = player name
+misc.join.quiet = {0} è entrato nel server
 
 # {0} = player name
 misc.leave = {0} è uscito dalla partita
 
 # {0} = player name
+misc.leave.quiet = {0} è uscito dal server
 
 misc.incorrectWorld = Oh\! Abbiamo avuto un errore\! Per favore cerca di rientrare.
 
+misc.serverFull = Il server è pieno, considera l'aggiornamento a premium per essere in grado di unirsi quando il server è pieno\!
 
 misc.serverRestart = Il server si sta riavviando\!
 
+type.int = numero intero
 
+type.float = numero decimale
 
+type.boolean = vero o falso
 
+type.duration = durata
 
+type.vector = (x,y,z) vettore
 
+type.chunk = (x,z) vettore
 
+type.version = (x.y.z) versione
 
 type.gamemode = modalità di gioco
 
+type.component = testo
 
+type.uri = url
 
+type.team = squadra
 
+type.settingkey = impostazione
 
 # {0} = a URL (e.g. "https://oc.tc")
+chat.clickLink = Maggiori informazioni su {0}
