Update Korean translations

--- a/util/src/main/i18n/translations/misc_ko_KR.properties
+++ b/util/src/main/i18n/translations/misc_ko_KR.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, {1}
 
 # {0} = "1"
-misc.millisecond = {0}밀리초
-
-# {0} = number of milliseconds
-misc.milliseconds = {0}밀리초
-
-# {0} = "1"
 misc.second = {0}초
 
 # {0} = number of seconds
@@ -33,23 +27,39 @@ misc.seconds = {0}초
 # {0} = "1"
 misc.minute = {0}분
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0}분
 
 # {0} = "1"
 misc.hour = {0}시간
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0}시간
 
 # {0} = "1"
 misc.day = {0}일
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0}일
 
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
+
 # {0} = duration (e.g. "4 hours")
-misc.timeAgo = {0}전
+misc.timeAgo = {0} 전
 
 # {0} = duration (e.g. "1:00" for 1 minute left, "15:25" for 15 minutes and 25 seconds left)
 misc.timeRemaining = 남은 시간\: {0}
@@ -143,6 +153,7 @@ misc.left = 왼쪽
 misc.right = 오른쪽
 
 misc.center = 중심
+
 
 misc.north = 북쪽
 
