--- a/util/src/main/i18n/translations/misc_nl_NL.properties
+++ b/util/src/main/i18n/translations/misc_nl_NL.properties
@@ -17,12 +17,6 @@ misc.list.pair = {0} en {1}
 misc.list.end = {0} en {1}
 
 # {0} = "1"
-misc.millisecond = {0} milliseconde
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisecondes
-
-# {0} = "1"
 misc.second = {0} seconde
 
 # {0} = number of seconds
@@ -31,20 +25,36 @@ misc.seconds = {0} seconden
 # {0} = "1"
 misc.minute = {0} minuut
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minuten
 
 # {0} = "1"
 misc.hour = {0} uur
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} uur
 
 # {0} = "1"
 misc.day = {0} dag
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dagen
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} geleden
@@ -109,6 +119,7 @@ misc.noPermission = Je hebt geen toestemming.
 misc.alert = Opgelet
 
 misc.warning = OPGELET
+
 
 
 
