--- a/util/src/main/i18n/translations/match_ja_JP.properties
+++ b/util/src/main/i18n/translations/match_ja_JP.properties
@@ -56,6 +56,12 @@ match.stats = キル数\: {0}  | 連続キル数\: {1}  | 死亡数\: {2}  | K/D
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats.concise = キル数：{0}　　死亡数：{1}　　K/D：{2}
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = 最大キル数\: {1} {0}
