--- a/util/src/main/i18n/translations/match_de_DE.properties
+++ b/util/src/main/i18n/translations/match_de_DE.properties
@@ -56,6 +56,12 @@ match.stats = Getötet\: {0}  |  Hintereinander getötet\: {1}  |  Gestorben\: {
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats.concise = Getötet\: {0}  Gestorben\: {1}  K/D\: {2}
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = Getötet\: {1} von {0}
