Update Polish translations

--- a/util/src/main/i18n/translations/misc_pl_PL.properties
+++ b/util/src/main/i18n/translations/misc_pl_PL.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0} i {1}
 
 # {0} = "1"
-misc.millisecond = {0} milisekunda
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} milisekund/y
-
-# {0} = "1"
 misc.second = {0} sekund
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} sekund
 # {0} = "1"
 misc.minute = {0} minuta
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minut/y
 
 # {0} = "1"
 misc.hour = {0} godzina
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} godzin/y
 
 # {0} = "1"
 misc.day = {0} dzień
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dni
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} temu
@@ -113,6 +123,7 @@ misc.tip = Porada
 
 
 misc.warning = OSTRZEŻENIE
+
 
 
 
