Update Italian translations

--- a/util/src/main/i18n/translations/map_it_IT.properties
+++ b/util/src/main/i18n/translations/map_it_IT.properties
@@ -10,7 +10,9 @@ map.info.gamemode.plural = Modalità di gioco
 
 map.info.genre = Genere
 
+map.info.tags = Tags
 
+map.info.created = Creata
 
 map.info.author.singular = Autore
 
@@ -20,33 +22,43 @@ map.info.contributors = Collaboratori
 
 map.info.rules = Regole
 
+map.info.playerLimit = N. di giocatori massimi
 
+map.info.playerLimit.vs = vs
 
+map.info.xml = XML
 
 map.info.xml.tip = Visualizza il codice XML che controlla questa mappa
 
+map.info.proto = Proto
 
 map.info.source = Sorgente
 
 map.info.folder = Cartella
 
+map.info.pools = Pools
 
 map.info.objective = Obiettivo
 
 # {0} = name of a maptag (e.g "#tnt" or "#controlpoint")
+map.info.mapTag.hover = Clicca per elencare tutte le {0} mappe
 
 # {0} = map name
 map.nextMap = Prossima mappa\: {0}
 
 # {0} = player name (who set the map)
 # {1} = map name
+map.setNext = {0} ha impostato la mappa successiva\: {1}
 
 map.setNext.confirm = Non puoi stabilire la mappa seguente quando c'è un riavvio programmato. Usa -f per forzare.
 
 # {0} = player name (who unset the map)
 # {1} = name of map that was unset
+map.setNext.revert = {0} ha rimosso {1} come prossima mappa
 
+map.noNextMap = Nessuna mappa successiva
 
+map.info.commandHint = Digita {0} per informazioni
 
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
@@ -56,54 +68,86 @@ map.cycleMap = Ruotando a {0} in {1}
 map.cycledMap = Ruotato a {0}
 
 # {0} = a duration (e.g. "1 minute")
+map.cycle = Ruotando a {0}
 
+map.cycled = Ruotazione
 
 map.protectPortal = Non puoi ostruire quest'area
 
 # {0} = map pool name (e.g. "Mega")
+pool.change = Il pool di mappe è stato impostato a {0} per adattarsi meglio al numero attuale di giocatori.
 
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = player name
+pool.change.force = {1} ha impostato il pool di mappe a {0}
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = a duration (e.g. "2 hours")
 # {2} = player name
+pool.change.forceTimed = {2} ha impostato il pool di mappe a {0} per {1}
 
 # {0} = number of positions
+pool.skip = Hai saltato un totale di {0} posizioni.
 
+pool.skip.negative = Non puoi saltare posizioni negative\!
 
+pool.name = Map Pool
 
+pool.title = Map Pools
 
+pool.noPoolMatch = Nessun pool di mappe corrispondente
 
+pool.noDynamic = Non è stato trovato alcun pool dinamico
 
+pool.noRotation = Nessuna rotazione attualmente in uso
 
+pool.noMapPools = Nessun pool di mappe caricato
 
 # {0} = map pool name (e.g. "Mega")
+pool.matching = {0} è già il pool di mappe attuale
 
+pool.mapPoolsDisabled = I pool di mappe sono attualmente disabilitati
 
+vote.noVote = Non c'è nulla per cui votare in questo momento
 
+vote.title.map = Voto Mappa
 
+vote.header.map = Fare clic su tutte le mappe che si desidera giocare\:
 
 # {0} = option name (e.g. "Airship Battle")
+vote.for = Votato per {0}
 
 # {0} = option name (e.g. "Airship Battle")
+vote.against = Votato contro {0}
 
 # {0} = option name (e.g. "Airship Battle")
+vote.abstain = Rimosso il tuo voto per {0}
 
+vote.disabled = Votazione disabilitata
 
+vote.modify.disallow = Impossibile modificare il voto in questo momento
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0} ha aggiunto {1} al voto
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0} ha rimosso {1} dal voto
 
+vote.limit = Il limite di selezione per la votazione è stato raggiunto
 
+vote.title.selection = Mappe Selezionate
 
 # {0} = player name (who toggled mode)
 # {1} = mode name
+vote.toggle = {0} ha disabilitato la modalità di voto a {1}
 
+vote.mode.replace = Sostituisci
 
+vote.mode.create = Crea
 
+vote.mode.hover = Clicca per attivare o disattivare la modalità di voto
 
+vote.noMapsFound = Nessuna mappa da cancellare dalla votazione
