Update Japanese translations

--- a/util/src/main/i18n/translations/map_ja_JP.properties
+++ b/util/src/main/i18n/translations/map_ja_JP.properties
@@ -62,13 +62,13 @@ map.info.commandHint = {0} を入力して詳細を表示
 
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
-map.cycleMap = {1} 秒後に {0} に代わります
+map.cycleMap = {1} 後に {0} に代わります
 
 # {0} = map name
 map.cycledMap = 次のマップ\: {0}
 
 # {0} = a duration (e.g. "1 minute")
-map.cycle = {0}秒後に変わります
+map.cycle = {0} 後に変わります
 
 map.cycled = 切り替え完了
 
