Update Danish translations

--- a/util/src/main/i18n/translations/match_da_DK.properties
+++ b/util/src/main/i18n/translations/match_da_DK.properties
@@ -47,6 +47,12 @@ match.class.notFound = Ingen klasse matchede din forespørgsel.
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 
