Update Romanian translations

--- a/util/src/main/i18n/translations/match_ro_RO.properties
+++ b/util/src/main/i18n/translations/match_ro_RO.properties
@@ -12,6 +12,7 @@ match.info.players = Jucători
 
 match.info.observers = Spectatori
 
+match.info.score = Scor
 
 # {0} = team name
 match.balanceTeams = Echipele vor fi egalate automat dacă {0} rămâne stackată
@@ -52,6 +53,12 @@ match.stats = Ucideri\: {0}  |  Ucideri la rând\: {1}  |  Morți\: {2}  |  K/D\
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
 
 # {0} = a player name
 # {1} = an amount of kills(number)
