--- a/util/src/main/i18n/translations/misc_no_NO.properties
+++ b/util/src/main/i18n/translations/misc_no_NO.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, og {1}
 
 # {0} = "1"
-misc.millisecond = {0} millisekund
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisekunder
-
-# {0} = "1"
 misc.second = {0} sekund
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} sekunder
 # {0} = "1"
 misc.minute = {0} minutt
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minutter
 
 # {0} = "1"
 misc.hour = {0} time
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} timer
 
 # {0} = "1"
 misc.day = {0} dag
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dager
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} siden
@@ -141,6 +151,7 @@ misc.left = Venstre
 misc.right = Høyre
 
 misc.center = Midterste
+
 
 misc.north = Nord
 
