Update Russian translations

--- a/util/src/main/i18n/translations/misc_ru_RU.properties
+++ b/util/src/main/i18n/translations/misc_ru_RU.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0} и {1}
 
 # {0} = "1"
-misc.millisecond = {0} миллисекунда
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} миллисекунд
-
-# {0} = "1"
 misc.second = {0} секунда
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} секунд
 # {0} = "1"
 misc.minute = {0} минута
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} минут
 
 # {0} = "1"
 misc.hour = {0} час
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} часов
 
 # {0} = "1"
 misc.day = {0} день
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} дней
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} назад
@@ -143,6 +153,7 @@ misc.left = Лев.
 misc.right = Прав.
 
 misc.center = Центр.
+
 
 misc.north = Север
 
