Update Italian translations

--- a/util/src/main/i18n/translations/ui_it_IT.properties
+++ b/util/src/main/i18n/translations/ui_it_IT.properties
@@ -1,37 +1,59 @@
+setting.title = Strumenti Osservazione
 
+setting.displayName = Strumenti
 
+setting.lore = Tasto destro per aprire il menù.
 
+setting.flyspeed = Velocità Di Volo
 
 # {0} = speed type (e.g. "Normal", "Fast", "Faster")
+setting.flyspeed.lore = Velocità attuale\: {0}
 
+setting.flyspeed.normal = Normale
 
+setting.flyspeed.fast = Veloce
 
+setting.flyspeed.faster = Più veloce
 
+setting.flyspeed.hyperspeed = Iperspeed
 
 setting.gamemode = Modalità di gioco
 
 # {0} = gamemode name (e.g. "Creative" or "Spectator")
+setting.gamemode.lore = Modalità di gioco corrente\: {0}
 
 # {0} = "/tools"
+setting.gamemode.warning = Per attivare o disattivare il tuo gamemode, usa {0}
 
+setting.gamemode.hover = Fare clic per aprire il menu degli strumenti
 
+setting.nightvision = Visione notturna
 
 # {0} = status (e.g. "On" or "Off")
+setting.nightvision.lore = Stato\: {0}
 
+setting.visibility = Visibilità
 
 # {0} = status (e.g. "Shown" or "Hidden")
+setting.visibility.lore = Visibilità dell''osservatore\: {0}
 
+setting.visibility.shown = Visibile
 
+setting.visibility.hidden = Nascosto
 
+setting.observersOnly = Siamo spiacenti, questo comando è solo per gli osservatori.
 
 # {0} = name of a setting (e.g. "chat", "sounds", "picker")
 # {1} = current setting value (e.g. "on", "off")
+setting.get = La tua impostazione {0} è impostata su {1}
 
 # {0} = list of setting values (e.g "on, off")
+setting.options = Possibili opzioni\: {0}
 
 # {0} = name of a setting
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
+setting.set = Cambiato il tuo {0} impostazione da {1} a {2}
 
 preview.noPotionEffects = Non ci sono efetti di pozioni
 
@@ -60,6 +82,7 @@ preview.walkSpeed = Velocità Camminata ({0}x)
 
 preview.closeButton = Chiudere
 
+picker.title.teamClass = Selezione Squadra E Classe
 
 picker.title.team = Selezione squadra
 
