--- a/util/src/main/i18n/translations/misc_sv_SE.properties
+++ b/util/src/main/i18n/translations/misc_sv_SE.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0} och {1}
 
 # {0} = "1"
-misc.millisecond = {0} millisekund
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisekunder
-
-# {0} = "1"
 misc.second = {0} sekund
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} sekunder
 # {0} = "1"
 misc.minute = {0} minut
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minuter
 
 # {0} = "1"
 misc.hour = {0} timme
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} timmar
 
 # {0} = "1"
 misc.day = {0} dag
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dagar
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} sedan
@@ -143,6 +153,7 @@ misc.left = Vänster
 misc.right = Höger
 
 misc.center = Center
+
 
 misc.north = Norr
 
