--- a/util/src/main/i18n/translations/misc_zh_CN.properties
+++ b/util/src/main/i18n/translations/misc_zh_CN.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}，{1}
 misc.list.end = {0}，和{1}
 
 # {0} = "1"
-misc.millisecond = {0} 毫秒
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} 毫秒
-
-# {0} = "1"
 misc.second = {0} 秒
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} 秒
 # {0} = "1"
 misc.minute = {0} 分钟
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} 分钟
 
 # {0} = "1"
 misc.hour = {0} 个小时
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} 小时
 
 # {0} = "1"
 misc.day = {0} 天
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} 天
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} 前
@@ -114,6 +124,7 @@ misc.tip = 提示
 misc.alert = 提示
 
 misc.warning = 警告
+
 
 
 
