Update Thai translations

--- a/util/src/main/i18n/translations/misc_th_TH.properties
+++ b/util/src/main/i18n/translations/misc_th_TH.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0},{1}
 misc.list.end = {0},และ {1}
 
 # {0} = "1"
-misc.millisecond = {0} มิลลิวินาที
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} มิลลิวินาที
-
-# {0} = "1"
 misc.second = {0} วินาที
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} วินาที
 # {0} = "1"
 misc.minute = {0} นาที
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} นาที
 
 # {0} = "1"
 misc.hour = ชั่วโมง {0}
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = ชั่วโมง {0}
 
 # {0} = "1"
 misc.day = {0} วัน
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} วัน
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} ที่ผ่านมา
@@ -114,6 +124,7 @@ misc.tip = เคล็ดลับ
 misc.alert = แจ้งเตือน
 
 misc.warning = คำเตือน
+
 
 
 
