--- a/util/src/main/i18n/translations/misc_ms_MY.properties
+++ b/util/src/main/i18n/translations/misc_ms_MY.properties
@@ -17,12 +17,6 @@ misc.list.pair = {0} dan {1}
 misc.list.end = {0}, dan {1}
 
 # {0} = "1"
-misc.millisecond = {0} milisaat
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} milisaat
-
-# {0} = "1"
 misc.second = {0} saat
 
 # {0} = number of seconds
@@ -31,20 +25,36 @@ misc.seconds = {0} saat
 # {0} = "1"
 misc.minute = {0} minit
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minit
 
 # {0} = "1"
 misc.hour = {0} jam
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} jam
 
 # {0} = "1"
 misc.day = {0} hari
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} hari
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} lalu
@@ -112,6 +122,7 @@ misc.tip = Petua
 misc.alert = Perhatian
 
 misc.warning = AMARAN
+
 
 
 
