--- a/util/src/main/i18n/translations/misc_en_GB.properties
+++ b/util/src/main/i18n/translations/misc_en_GB.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, and {1}
 
 # {0} = "1"
-misc.millisecond = {0} millisecond
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} milliseconds
-
-# {0} = "1"
 misc.second = {0} second
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} seconds
 # {0} = "1"
 misc.minute = {0} minute
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minutes
 
 # {0} = "1"
 misc.hour = {0} hour
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} hours
 
 # {0} = "1"
 misc.day = {0} day
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} days
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} ago
@@ -143,6 +153,7 @@ misc.left = Left
 misc.right = Right
 
 misc.center = Centre
+
 
 misc.north = North
 
