Update Tagalog translations

--- a/util/src/main/i18n/translations/misc_tl_PH.properties
+++ b/util/src/main/i18n/translations/misc_tl_PH.properties
@@ -17,10 +17,6 @@ misc.list.pair = {0} at {1}
 misc.list.end = {0}, at {1}
 
 # {0} = "1"
-
-# {0} = number of milliseconds
-
-# {0} = "1"
 misc.second = {0} segundo
 
 # {0} = number of seconds
@@ -29,20 +25,36 @@ misc.seconds = {0} na segundo
 # {0} = "1"
 misc.minute = {0} minuto
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minuto
 
 # {0} = "1"
 misc.hour = {0} oras
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} oras
 
 # {0} = "1"
 misc.day = {0} araw
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} araw
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} nakaraan
@@ -99,6 +111,7 @@ misc.noPermission = Wala kang permiso.
 
 
 misc.warning = BABALA
+
 
 
 
