Update Pirate English translations

--- a/util/src/main/i18n/translations/misc_en_PT.properties
+++ b/util/src/main/i18n/translations/misc_en_PT.properties
@@ -17,28 +17,38 @@ misc.list.pair = {0} ''n {1}
 misc.list.end = {0} ''n {1}
 
 # {0} = "1"
-misc.millisecond = {0} Mini-second
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} Mini-seconds
-
-# {0} = "1"
 
 # {0} = number of seconds
 
 # {0} = "1"
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 
 # {0} = "1"
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 
 # {0} = "1"
 misc.day = {0} moon
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} moons
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 
@@ -100,6 +110,7 @@ misc.tip = Old Salt's advice
 misc.alert = Avast
 
 misc.warning = Yer have a warning
+
 
 
 
