Update LOLCAT translations

--- a/util/src/main/i18n/translations/misc_lol_US.properties
+++ b/util/src/main/i18n/translations/misc_lol_US.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0} n {1}
 misc.list.end = {0}, an {1}
 
 # {0} = "1"
-misc.millisecond = {0} Blink
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} Blinkz
-
-# {0} = "1"
 misc.second = {0} sekond
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} secundz
 # {0} = "1"
 misc.minute = {0} Nap
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} Napz
 
 # {0} = "1"
 misc.hour = {0} slep
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} slepez
 
 # {0} = "1"
 misc.day = {0} Lazi Dei
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} Lazi Deiz
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} bfor
@@ -143,6 +153,7 @@ misc.left = Lefty
 misc.right = Righty
 
 misc.center = Centerrr
+
 
 misc.north = Nowrth
 
