Update Italian translations

--- a/util/src/main/i18n/translations/moderation_it_IT.properties
+++ b/util/src/main/i18n/translations/moderation_it_IT.properties
@@ -1,67 +1,103 @@
 # TODO: Rename some keys and move others to misc
 
 # {0} = Type of punishment
+moderation.type = Tipo\: {0}
 
+moderation.type.kick = Kickato
 
+moderation.type.mute = Mutato
 
+moderation.type.warn = Avvisato
 
+moderation.type.ban = Bannato permanentemente
 
 # {0} = duration of the ban (e.g. "7 days")
+moderation.type.temp_ban = {0} ban
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.name = Staff Online ({0})\: {1}
+moderation.staff.empty = Nessuno staffer online \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
+moderation.screen.kick = Sei stato kickato per {0}
 
 # {0} = punishment reason
+moderation.screen.ban = Sei stato bannato permanentemente per {0}
 
 # {0} = punishment reason
+moderation.screen.temp_ban = Sei stato temporaneamente bannato per {0}
 
 # {0} = a http link (e.g. "https://example.com/rules")
+moderation.screen.rulesLink = Si prega di leggere il regolamento a {0}
 
 # {0} = staff member name (e.g. "Notch")
+moderation.screen.signoff = Effettuato da {0}
 
 # {0} = duration (e.g. "2 weeks")
+moderation.screen.expires = Scade tra {0}
 
 # {0} = mute reason
+moderation.mute.message = Sei stato mutato per {0}
 
+moderation.mute.list = Giocatori Mutati
 
-
-# {0} = player name
-
-# {0} = player name
-
-# {0} = player name
+moderation.mute.none = Non ci sono giocatori mutati online\!
 
 # {0} = player name
-
-
-# {0} = player name
-
-
+moderation.mute.hover = Clicca per smutare {0}
 
 # {0} = player name
-
+moderation.mute.target = {0} è mutato, e non può ricevere messaggi
 
 # {0} = player name
+moderation.mute.existing = {0} è già mutato\!
+
+# {0} = player name
+moderation.unmute.sender = Sei stato unmutato {0}
+
+moderation.unmute.target = Sei stato unmutato, puoi ora inviare messaggi
+
+# {0} = player name
+moderation.unmute.none = {0} non è mutato.
+
+moderation.reports.none = Non ci sono state segnalazioni recenti\!
+
+moderation.reports.header = Segnalazioni Recenti
+
+# {0} = player name
+moderation.reports.hover = Segnalato da {0}
+
+moderation.alts.header = Altri-Account
+
+# {0} = player name
+moderation.alts.noAlts = {0} non ha altri account online.
 
 # {0} = ip address (e.g. "1.2.3.4")
+moderation.ipBan.invalidIP = {0} non è un indirizzo IP valido
 
 # {0} = player name
+moderation.ipBan.banned = {0} è stato IP bannato
 
 # {0} = player name or ip address (e.g. "Notch" or "1.2.3.4")
 # {1} = number of alternate accounts
+moderation.ipBan.bannedWithAlts = {0} è stato bannato tramite IP con {1}
 
 # {0} = player name
+moderation.records.lookupNone = {0} non ha nessuna punizione recente
 
+moderation.records.header = Informazioni Sulla Punizione
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
+moderation.records.reason = Motivo\: {0}
 
 # {0} = player name
 # {1} = another player name
+moderation.similarIP.loginEvent = {0} ha un IP simile al giocatore bannato {1}
 
 # {0} = player name
 # {1} = past duration (e.g. "5 minutes ago")
+moderation.similarIP.hover = Bannato da {0}, {1}
 
 # {0} = player name
 moderation.freeze.freeze = Sei stato immobilizzato {0}
@@ -70,34 +106,45 @@ moderation.freeze.freeze = Sei stato immobilizzato {0}
 moderation.freeze.unfreeze = Sei stato liberato {0}
 
 # {0} = player name
+moderation.freeze.frozen = Sei stato congelato
 
 # {0} = player name
+moderation.freeze.unfrozen = Sei stato scongelato
 
 moderation.freeze.itemName = Immobilizzatore di giocatori
 
 moderation.freeze.itemDescription = Clicca col destro su un giocatore per immobilizzarlo/liberarlo
 
+moderation.freeze.notEnabled = Il congelamento non è abilitato
 
 # {0} = player name
 moderation.freeze.exempt = {0} non può essere immobilizzato
 
 # {0} = player name
+moderation.freeze.alreadyFrozen = {0} è già congelato
 
 # {0} = player name
+moderation.freeze.alreadyThawed = {0} non è congelato
 
 # {0} = number of players
 # {1} = list of player names (e.g. "Alice, Bob, and Jerry")
+moderation.freeze.frozenList.online = Giocatori Congelati ({0})\: {1}
 
 # {0} = number of players
 # {1} = list of player names
+moderation.freeze.frozenList.offline = Giocatori Offline Congelati ({0})\: {1}
 
+moderation.freeze.frozenList.none = Non ci sono giocatori congelati\!
 
 # {0} = staff player name
 # {1} = target player name
+moderation.freeze.broadcast.frozen = {0} ha congelato {1}
 
 # {0} = staff player name
 # {1} = target player name
+moderation.freeze.broadcast.thaw = {0} ha scongelato {1}
 
+moderation.freeze.broadcast.hover = Fare clic per invertire l'azione
 
 moderation.defuse.water = Non puoi disinnescare la TNT nell'acqua.
 
@@ -115,19 +162,27 @@ moderation.defuse.player = Hai disinnescato la TNT di {0}.
 # {0} = defuser player name
 # {1} = griefer player name
 # {2} = entity name
+moderation.defuse.alert.player = {0} ha disinnescato {1} di {2}.
 
 # {0} = defuser player name
 # {1} = entity name
+moderation.defuse.alert.world = {0} ha disinnescato {1}.
 
 # {0} = reporter player name
 # {1} = accused player name
 # {2} = reason for report (e.g. "Is griefing my home")
+moderation.report.notify = {0} ha segnalato {1}\: {2}
+moderation.report.acknowledge = Il problema sarà gestito tra poco.
 
 # {0} = number of seconds
 moderation.afk.warn = Sarai disconnesso per inattività in {0} secondi
 
 moderation.afk.kick = Sei stato disconnesso per inattività
 
+vanish.activate = Sei ora invisibile\!
 
+vanish.deactivate = Sei ora visibile\!
 
+vanish.chat.deny = È possibile utilizzare solo la chat di amministratore mentre sei invisibile
 
+vanish.hotbar = Attualmente sei invisibile
