Update Korean translations

--- a/util/src/main/i18n/translations/moderation_ko_KR.properties
+++ b/util/src/main/i18n/translations/moderation_ko_KR.properties
@@ -100,10 +100,10 @@ moderation.similarIP.loginEvent = {0}은(는) 차단된 플레이어 {1}과(와)
 moderation.similarIP.hover = {0}에 의해 차단됨, {1}
 
 # {0} = player name
-moderation.freeze.freeze = {0}을(를) 동결시켰습니다
+moderation.freeze.freeze = {0}을(를) 얼어 붙였습니다
 
 # {0} = player name
-moderation.freeze.unfreeze = {0}의 동결을 해제했습니다
+moderation.freeze.unfreeze = {0}을(를) 녹였습니다
 
 # {0} = player name
 moderation.freeze.frozen = 당신은 얼어붙었습니다
@@ -118,7 +118,7 @@ moderation.freeze.itemDescription = 플레이어를 우클릭하여 얼리거나
 moderation.freeze.notEnabled = 결빙이 활성화되어있지 않습니다
 
 # {0} = player name
-moderation.freeze.exempt = {0} 는 얼릴수 없습니다
+moderation.freeze.exempt = {0}은(는) 얼릴 수 없습니다
 
 # {0} = player name
 moderation.freeze.alreadyFrozen = {0}은(는) 이미 얼어있습니다
