Update Italian translations

--- a/util/src/main/i18n/translations/error_it_IT.properties
+++ b/util/src/main/i18n/translations/error_it_IT.properties
@@ -1,8 +1,12 @@
 # {0} = arbitrary user input
 # {1} = a value type (see translations "type.*", e.g. "duration", "whole number")
+error.invalidFormat = Formato non valido\: ''{0}'' non è un {1}
 
 # {0} = numeric value
 # {1} = numeric range (e.g. "[1, 5)")
+error.outOfRange = Valore non valido\: {0} non è tra {1}
 
 # {0} = arbitrary user input
+error.suggestionSuffix = (forse intendevi ''{0}''?)
 
+error.unknown = Si è verificato un errore sconosciuto, si prega di controllare i log del server
