Update Italian translations

--- a/util/src/main/i18n/translations/command_it_IT.properties
+++ b/util/src/main/i18n/translations/command_it_IT.properties
@@ -1,7 +1,8 @@
 # {0} = Invalid target input
+command.notJoinedServer = {0} non è ancora entrato nel server.
 
 # {0} = command argument (could be any string)
-command.numberExpected = Previsto numero al posto di ''{0}''
+command.numberExpected = E'' previsto numero al posto di ''{0}''
 
 command.emptyResult = Nessun risultato
 
@@ -35,16 +36,17 @@ command.rotationNotFound = Non si sono trovate rotazioni che corrispondono a que
 
 command.playerNotFound = Nessun giocatore corrisponde a questi criteri.
 
-command.multiplePlayersFound = Più di un giocatore trovato\! Utilizza @<nome> per avere una corrispondenza esatta.
+command.multiplePlayersFound = Più di un giocatore trovato\! Utilizza @<name> per avere una corrispondenza esatta.
 
 # {0} = duration (e.g. "10 seconds")
+command.cooldown = Per favore aspetta {0} prima di eseguire nuovamente il comando
 
 command.specifyPlayer = Specificare un giocatore
 
-command.multipleOnlinePlayersFound = Più di un giocatore trovato\! Utilizza @<nome> per avere una corrispondenza esatta.
+command.multipleOnlinePlayersFound = Più di un giocatore trovato\! Utilizza @<name> per avere una corrispondenza esatta.
 
 # {0} = player name
-command.playerNotOnline = {0} non è online attualmente
+command.playerNotOnline = {0} non è attualmente online
 
 # {0} = player name
 command.playerLocationUnavailable = La posizione attuale di {0} non è disponibile
@@ -65,11 +67,17 @@ command.simplePageHeader = {0} di {1}
 command.invalidPage = La pagina {0} non esiste. Le pagine vanno da 1 a {1}.
 
 # {0} = number of players online
+command.list.online = Online Totali\: {0}
 
+command.list.teams = Teams\:
 
+command.list.participants = Partecipanti
 
 # {0} = command name
+command.message.noReply = Nessun messaggio da rispondere, usa {0}
 
 # {0} = player name
+command.message.blocked = {0} non accetta messaggi in questo momento.
 
 # {0} = map name
+command.maps.hover = Clicca per vedere {0}
