Update Italian translations

--- a/util/src/main/i18n/translations/join_it_IT.properties
+++ b/util/src/main/i18n/translations/join_it_IT.properties
@@ -1,6 +1,8 @@
 join.ok = Ti sei unito alla partita
 
+join.ok.queue = Ti sei unito alla coda del match
 
+join.ok.dequeue = Sei stato rimosso dalla coda della partita
 
 # {0} = team name (e.g. "Red Team" or "Observers")
 join.ok.team = Sei entrato nella squadra {0}
@@ -33,20 +35,25 @@ join.err.noPermission = Non ti è consentito unirti a questa partita
 
 join.err.alreadyJoined = Ti sei già unito alla partita
 
+join.err.teamGrief = Hai causato un impatto negativo eccessivo per giocare a questa partita
 
 # {0} = team name (e.g. "Observers")
 join.err.alreadyJoined.team = Sei già entrato in {0}
 
+join.err.noSwitch = Non sei autorizzato a cambiare squadra
 
 join.err.noChoice = Non ti è permesso scegliere la tua squadra
 
+join.err.afterStart = Non sei autorizzato a partecipare a questa partita dopo che è iniziata
 
 join.err.afterFinish = La partita è finita - la prossima inizierà tra un momento
 
+join.err.full = Siamo spiacenti, la partita è piena
 
 # {0} = team name (e.g. "Blue Team")
 join.err.full.team = Spiacenti, {0} è al completo
 
+join.err.vanish = Non puoi unirti alla partita mentre sei invisibile
 
 leave.ok.priorityKick = Sei stato espulso dalla partita per fare spazio ad un giocatore premium
 
