Update Italian translations

--- a/util/src/main/i18n/translations/gamemode_it_IT.properties
+++ b/util/src/main/i18n/translations/gamemode_it_IT.properties
@@ -1,43 +1,72 @@
-gamemode.generic.name = Partita
 
+gamemode.dtc.name = Distruggi il Nucleo
 
+gamemode.dtm.name = Distruggi il Monumento
 
 gamemode.ctw.name = Captare the Wool
 
+gamemode.ctf.name = Cattura la Bandiera
+
+
+gamemode.ad.name = Attacca/Difendi
+
+
+gamemode.koth.name = Re della Collina
+
+gamemode.blitz.name = Blitz
+
+gamemode.rage.name = Rage
+
+gamemode.scorebox.name = Scorebox
+
+gamemode.arcade.name = Arcade
 
 
 
+gamemode.dtc.acronym = DTC
+
+gamemode.dtm.acronym = DTM
+
+gamemode.ctw.acronym = CTW
+
+gamemode.ctf.acronym = CTF
+
+gamemode.tdm.acronym = TDM
+
+gamemode.ad.acronym = A/D
 
 
+gamemode.koth.acronym = KoTH
 
+gamemode.blitz.acronym = Blitz
 
+gamemode.rage.acronym = Rage
 
+gamemode.scorebox.acronym = Scorebox
 
-gamemode.mixed.name = Mista
+gamemode.arcade.acronym = Arcade
 
-gamemode.generic.acronym = Partita
+gamemode.ffa.acronym = FFA
 
+objective.name.monument = Monumento
 
+objective.name.antenna = Antenna
 
+objective.name.orb = Globo
 
+objective.name.inhibitor = Inibitore
 
+objective.name.tower = Torre
 
+objective.name.base = Base
 
+objective.name.ship = Nave
 
+objective.name.core = Nucleo
 
+objective.name.reactor = Reattore
 
-
-
-
-gamemode.mixed.acronym = Mista
-
-
-
-
-
-
-
-
+objective.name.engine = Motore
 
 
 
@@ -46,6 +75,7 @@ gamemode.mixed.acronym = Mista
 objective.modeCountdown = {0} fra {1}
 
 # Don't translate, keep as-is
+objective.credit.percentage = {0} ({1}%)
 
 objective.credit.etc = altri
 
@@ -54,6 +84,7 @@ objective.credit.many = tanti, tanti giocatori
 objective.credit.unknown = forze sconosciute
 
 # {0} = objective name
+objective.credit.future = Riceverai crediti quando {0} sarà completato
 
 # TODO: Replace with objective.damageOwn, etc.
 destroyable.damageOwn = Non puoi danneggiare il tuo obiettivo.
@@ -65,17 +96,22 @@ destroyable.repairDisabled = Questo obiettivo non puo essere riparato
 core.damageOwn = Non puoi sabotare il tuo core.
 
 # {0} = objective name (e.g. "Left Core")
+objective.damageOwn = Non puoi sabotare il tuo {0}
 
 # {0} = objective name
+objective.repairOther = Non puoi riparare {0}
 
 # {0} = objective name
+objective.repairDisabled = Non sei autorizzato a riparare il tuo {0}
 
 # {0} = player name
 # {1} = monument name (e.g. "Monument A")
 # {2} = team name
+destroyable.complete.owned = {2} {1} è stato distrutto da {0}
 
 # {0} = player name
 # {1} = monument name
+destroyable.complete = {1} è stato distrutto da {0}
 
 # {0} = player name
 # {1} = monument name
@@ -95,15 +131,19 @@ destroyable.touch.owned = {1} di {2} è stato danneggiato
 destroyable.touch.player = {1} danneggiato da {0}
 
 # {1} = monument name
+destroyable.touch.you = Hai danneggiato {1}
 
 # {1} = monument name
+destroyable.touch = {1} è stato danneggiato
 
 # {0} = player name
 # {1} = core name (e.g. "Right Core")
 # {2} = team name
+core.complete.owned = {2} {1} è stato bucato da {0}
 
 # {0} = player name
 # {1} = core name
+core.complete = {1} è stato bucato da {0}
 
 # {0} = player name
 # {1} = wool name (e.g "Red Wool")
@@ -112,13 +152,16 @@ wool.complete.owned = {0} ha piazzato {1} per {2}
 
 # {0} = player name
 # {1} = wool name
+wool.complete = {0} ha piazzato {1}
 
 # {0} = player name
 # {1} = wool name
 # {2} = team name
+wool.touch.owned.player = {1} è stata rubata da {0} per {2}
 
 # {0} = player name
 # {1} = wool name
+wool.touch.player = {1} è stata rubata da {0}
 
 # {1} = wool name
 # {2} = team name
@@ -129,10 +172,13 @@ wool.touch.you = Hai raccolto {1}
 
 # {0} = team name
 # {1} = wool name
+wool.wrongTeam = Solo un membro di {0} è autorizzato a posizionare {1} lì
 
 # {0} = wool name
+wool.wrongWool = Solo {0} può essere piazzata qui
 
 # {0} = wool name
+wool.craftingDisabled = Non puoi craftare {0}
 
 # {0} = flag name (e.g. "Green Flag")
 # {1} = player name
@@ -159,13 +205,16 @@ flag.return = {0} è stata riportata
 
 # {0} = flag name
 # {1} = duration (e.g. "5 seconds")
+flag.willRespawn = {0} riapparirà in {1} secondi
 
 # {0} = flag name
 # {1} = post name
 # {2} = duration
+flag.willRespawn.named = {0} riapparirà a {1} in {2} secondi
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0} riapparirà in {1} secondi
 
 # {0} = flag name
 flag.respawn = {0} è riapparsa
@@ -187,12 +236,18 @@ flag.cannotBreakBlockUnder = Il blocco sotto la bandiera non può essere minato
 # {0} = player name
 # {1} = number of points (e.g. "3 points")
 # {2} = team name
+scorebox.scored = {0} ha guadagnato {1} per {2}
 
 # {0} = number of player lives left (e.g. "2 lives")
 blitz.livesRemaining = Hai {0} rimasta/e.
 
 # {0} = "Blitz"
+blitz.joinDenied = Non puoi partecipare durante una partita di {0}.
 
+victoryCondition.blitz = molti sopravvisuti
 
+victoryCondition.goals = maggior parte degli obiettivi
 
+victoryCondition.tie = nessun vincitore
 
+victoryCondition.score = punteggio più alto
