--- a/util/src/main/i18n/translations/gamemode_ko_KR.properties
+++ b/util/src/main/i18n/translations/gamemode_ko_KR.properties
@@ -1,4 +1,3 @@
-gamemode.generic.name = 경기
 
 gamemode.dtc.name = 코어 파괴
 
@@ -8,11 +7,11 @@ gamemode.ctw.name = 양털 뺏기
 
 gamemode.ctf.name = 깃발 뺏기
 
-gamemode.tdm.name = 팀 데스매치
 
 gamemode.ad.name = 공격/방어
 
-gamemode.koth.name = 고지 점령전
+
+gamemode.koth.name = 언덕의 왕
 
 gamemode.blitz.name = 전격전
 
@@ -22,11 +21,7 @@ gamemode.scorebox.name = 스코어박스
 
 gamemode.arcade.name = 아케이드
 
-gamemode.ffa.name = 난투
 
-gamemode.mixed.name = 복합
-
-gamemode.generic.acronym = 경기
 
 gamemode.dtc.acronym = DTC
 
@@ -40,6 +35,7 @@ gamemode.tdm.acronym = TDM
 
 gamemode.ad.acronym = 공/방
 
+
 gamemode.koth.acronym = KoTH
 
 gamemode.blitz.acronym = 전격전
@@ -51,8 +47,6 @@ gamemode.scorebox.acronym = 스코어박스
 gamemode.arcade.acronym = 아케이드
 
 gamemode.ffa.acronym = FFA
-
-gamemode.mixed.acronym = 복합
 
 objective.name.monument = 기념물
 
@@ -73,6 +67,8 @@ objective.name.core = 코어
 objective.name.reactor = 원자로
 
 objective.name.engine = 엔진
+
+
 
 # {0} = objective mode (e.g. "Gold Core Mode")
 # {1} = time remaining (e.g. "30 seconds")
