Better line numbers for TextException
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -221,5 +221,9 @@ type.team = team
 
 type.settingkey = setting
 
+type.uuid = uuid
+
+type.localdate = (yyyy-mm-dd) date
+
 # {0} = a URL (e.g. "https://oc.tc")
 chat.clickLink = More info at {0}
