--- a/util/src/main/i18n/templates/death.properties
+++ b/util/src/main/i18n/templates/death.properties
@@ -3,9 +3,6 @@
 death.predictedSuffix = (predicted)
 
 # {0} = victim player name
-death.cactus = {0} tried to hug a cactus
-
-# {0} = victim player name
 death.drown = {0} forgot to breathe
 
 # {0} = victim player name
@@ -13,9 +10,6 @@ death.lightning = {0} was struck by lightning
 
 # {0} = victim player name
 death.starve = {0} starved to death
-
-# {0} = victim player name
-death.suffocate = {0} suffocated
 
 # {0} = victim player name
 death.poison = {0} died of poisoning
@@ -101,7 +95,7 @@ death.squash = {0} was squashed to death
 
 # {0} = victim player name
 # {1} = killer player name
-death.squash.player = {0} was squashed dead by {1}
+death.squash.player = {0} was squashed to death by {1}
 
 # {0} = victim player name
 # {2} = entity name (e.g. "Anvil")
@@ -111,6 +105,20 @@ death.squash.entity = {0} was squashed by a falling {2}
 # {1} = killer player name
 # {2} = entity name (e.g. "Anvil")
 death.squash.player.entity = {0} was squashed by {1}'s falling {2}
+
+# {0} = victim player name
+death.suffocate = {0} suffocated
+
+# {0} = victim player name
+# {1} = killer player name
+death.suffocate.player = {0} was suffocated by {1}
+
+# {0} = victim player name
+death.cactus = {0} tried to hug a cactus
+
+# {0} = victim player name
+# {1} = killer player name
+death.cactus.player = {0} tried to hug {1}'s cactus
 
 # {0} = victim player name
 # {1} = killer player name
