Add more gamemode IDs for <gamemode> module
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -8,6 +8,10 @@ gamemode.ctw.name = Capture the Wool
 
 gamemode.ctf.name = Capture the Flag
 
+gamemode.ffb.name = Flag Football
+
+gamemode.kotf.name = King of the Flag
+
 gamemode.tdm.name = Deathmatch
 
 gamemode.ad.name = Attack/Defend
@@ -19,6 +23,10 @@ gamemode.koth.name = King of the Hill
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
+
+gamemode.br.name = Blitz: Rage
+
+gamemode.rfw.name = Race for Wool
 
 gamemode.scorebox.name = Scorebox
 
@@ -36,17 +44,25 @@ gamemode.ctw.acronym = CTW
 
 gamemode.ctf.acronym = CTF
 
+gamemode.ffb.acronym = FFB
+
+gamemode.kotf.acronym = KotF
+
 gamemode.tdm.acronym = TDM
 
 gamemode.ad.acronym = A/D
 
 gamemode.cp.acronym = CP
 
-gamemode.koth.acronym = KoTH
+gamemode.koth.acronym = KotH
 
 gamemode.blitz.acronym = Blitz
 
 gamemode.rage.acronym = Rage
+
+gamemode.br.acronym = Blitz: Rage
+
+gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
 
