add scorelimit command
Signed-off-by: destiall <destialpvp@gmail.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -152,6 +152,9 @@ match.timeLimit.result = {1} after {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = The time limit is {0} with the result {1}
 
+# {0} = new score limit of the match
+match.scoreLimit.commandOutput = The score limit is now {0}
+
 broadcast.go = Go!
 
 broadcast.matchStart = The match has started!
