error messages if module not found
Signed-off-by: destiall <destialpvp@gmail.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -152,8 +152,12 @@ match.timeLimit.result = {1} after {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = The time limit is {0} with the result {1}
 
+match.timeLimit.notEnabled = The time limit is not available on this map
+
 # {0} = new score limit of the match
 match.scoreLimit.commandOutput = The score limit is now {0}
+
+match.scoreLimit.notEnabled = The score limit is not available on this map
 
 broadcast.go = Go!
 
