Add map visibility * Allows for maps to be hidden from public viewing
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -74,6 +74,17 @@ map.cycled = Cycled
 
 map.protectPortal = You may not obstruct this area
 
+# {1} = visibility type (e.g. "hidden")
+# {0} = map name
+map.visibility = Map visibility set to {0} for {1}
+
+map.visibility.hidden = hidden
+
+map.visibility.shown  = shown
+
+map.visibility.title = Hidden Maps
+
+
 # {0} = map pool name (e.g. "Mega")
 pool.change = Map pool has been set to {0} in order to better adjust to the current player count.
 
