--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -157,7 +157,7 @@ match.timeLimit.notEnabled = The time limit is not available on this map
 # {0} = new score limit of the match
 match.scoreLimit.commandOutput = The score limit is now {0}
 
-match.scoreLimit.notEnabled = The score limit is not available on this map
+match.scoreLimit.notEnabled = This map does not use scores
 
 broadcast.go = Go!
 
