Add exception and more strict phase check to /maps
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -225,5 +225,7 @@ type.uuid = uuid
 
 type.localdate = (yyyy-mm-dd) date
 
+type.phase = phase
+
 # {0} = a URL (e.g. "https://oc.tc")
 chat.clickLink = More info at {0}
