Add Mixed gamemode as translatable component
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -34,6 +34,8 @@ gamemode.arcade.name = Arcade
 
 gamemode.ffa.name = Free for All
 
+gamemode.mixed.name = Mixed
+
 gamemode.generic.acronym = Objectives
 
 gamemode.dtc.acronym = DTC
@@ -69,6 +71,8 @@ gamemode.scorebox.acronym = Scorebox
 gamemode.arcade.acronym = Arcade
 
 gamemode.ffa.acronym = FFA
+
+gamemode.mixed.acronym = Mixed
 
 objective.name.monument = Monument
 
