Add bowDamageTaken to stats menu item
Signed-off-by: BT (calcastor/mame) <43831917+calcastor@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -91,7 +91,8 @@ match.stats.damage = Damage: {1} by {0}
 match.stats.damage.dealt = Damage Dealt (Bow): {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Damage Received: {0}
+# {1} = an amount of damage
+match.stats.damage.received = Damage Received (Bow): {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
@@ -211,4 +212,3 @@ admin.start.unknownState = Match could not be started at this time.
 admin.end.unknownError = Match could not be ended at this time.
 
 admin.setPool.activeCycle = You may not adjust the pool while match is cycling.
-
