Add Colors as Descriptor Patterns
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -84,6 +84,8 @@ objective.name.inhibitor = Inhibitor
 
 objective.name.tower = Tower
 
+objective.name.pillar = Pillar
+
 objective.name.base = Base
 
 objective.name.ship = Ship
