--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -164,6 +164,8 @@ misc.center = Center
 
 misc.mid = Mid
 
+misc.middle = Middle
+
 misc.north = North
 
 misc.south = South
@@ -171,6 +173,41 @@ misc.south = South
 misc.east = East
 
 misc.west = West
+
+misc.white = White
+
+misc.orange = Orange
+
+misc.magenta = Magenta
+
+misc.lightBlue = Light Blue
+
+misc.yellow = Yellow
+
+misc.lime = Lime
+
+misc.pink = Pink
+
+misc.gray = Gray
+
+misc.lightGray = Light Gray
+
+misc.cyan = Cyan
+
+misc.purple = Purple
+
+misc.blue = Blue
+
+misc.brown = Brown
+
+misc.green = Green
+
+misc.red = Red
+
+misc.black = Black
+
+# Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Light
 
 # {0} = player name
 misc.teleportTo = Teleport to {0}
