Add support for /mode list
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -66,6 +66,8 @@ command.simplePageHeader = {0} of {1}
 # {1} = total number of pages
 command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
 
+command.conditionUnmet = Condition Unmet
+
 # {0} = number of players online
 command.list.online = Total Online: {0}
 
