--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -120,6 +120,12 @@ misc.or = {0} or {1}
 # do not translate, keep as-is
 misc.snowman = ☃
 
+# do not translate, keep as-is
+misc.checkmark = ✔
+
+# do not translate, keep as-is
+misc.crossmark = ✘
+
 misc.unknown = Unknown
 
 misc.console = Console
