Add support for /mode push
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -24,6 +24,8 @@ command.onlyPlayers = You must be a player to use this command.
 # {0} = module name (proper noun)
 command.moduleNotFound = The {0} module is not in use for this match
 
+command.matchNotStarted = The match must start before using this command.
+
 command.noTeams = Teams are not in use for this match
 
 command.noPlayers = Players cannot join this match
@@ -67,6 +69,14 @@ command.simplePageHeader = {0} of {1}
 command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
 
 command.conditionUnmet = Condition Unmet
+
+command.modesPushed = Affected modes have been pushed
+
+command.forwards = forwards
+
+command.backwards = backwards
+
+command.by = by
 
 # {0} = number of players online
 command.list.online = Total Online: {0}
