Add /mode start command to start conditional objective modes
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -70,13 +70,15 @@ command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
 
 command.conditionUnmet = Condition Unmet
 
+command.nextMode = Next Mode:
+
 command.modesPushed = Affected modes have been pushed
+
+command.selectedModePushed = Selected mode will start in
 
 command.forwards = forwards
 
 command.backwards = backwards
-
-command.by = by
 
 # {0} = number of players online
 command.list.online = Total Online: {0}
