Clarify /mode start output
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -74,11 +74,14 @@ command.nextMode = Next Mode:
 
 command.modesPushed = Affected modes have been pushed
 
-command.selectedModePushed = Selected mode will start in
+# {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} will start in
 
 command.forwards = forwards
 
 command.backwards = backwards
+
+command.by = by
 
 # {0} = number of players online
 command.list.online = Total Online: {0}
