Add translation context
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -74,14 +74,17 @@ command.nextMode = Next Mode:
 
 command.modesPushed = Affected modes have been pushed
 
+# time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = forwards
+
+# time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = back
+
+# amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = by
+
 # {0} = mode name (e.g. GOLD, Glass Mode)
 command.selectedModePushed = {0} will start in
-
-command.forwards = forwards
-
-command.backwards = backwards
-
-command.by = by
 
 # {0} = number of players online
 command.list.online = Total Online: {0}
