Translate time left in formatSingleCountdown
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -86,6 +86,9 @@ command.modesPushedBy = by
 # {0} = mode name (e.g. GOLD, Glass Mode)
 command.selectedModePushed = {0} will start in
 
+# amount of time remaining (e.g. 1:00 left)
+command.timeLeft = left
+
 # {0} = number of players online
 command.list.online = Total Online: {0}
 
