--- a/util/src/main/i18n/translations/death_no_NO.properties
+++ b/util/src/main/i18n/translations/death_no_NO.properties
@@ -3,9 +3,6 @@
 death.predictedSuffix = (forutsatt)
 
 # {0} = victim player name
-death.cactus = {0} prøvde å klemme en kaktus
-
-# {0} = victim player name
 death.drown = {0} glemte å puste
 
 # {0} = victim player name
@@ -13,9 +10,6 @@ death.lightning = {0} ble truffet av lynet
 
 # {0} = victim player name
 death.starve = {0} sultet i hjel
-
-# {0} = victim player name
-death.suffocate = {0} ble kvalt
 
 # {0} = victim player name
 death.poison = {0} døde av forgiftning
@@ -101,7 +95,6 @@ death.squash = {0} ble klemt til døde
 
 # {0} = victim player name
 # {1} = killer player name
-death.squash.player = {0} ble klemt til døde av {1}
 
 # {0} = victim player name
 # {2} = entity name (e.g. "Anvil")
@@ -111,6 +104,18 @@ death.squash.entity = {0} ble knust av en fallende {2}
 # {1} = killer player name
 # {2} = entity name (e.g. "Anvil")
 death.squash.player.entity = {0} ble knust av {1}''s fallende {2}
+
+# {0} = victim player name
+death.suffocate = {0} ble kvalt
+
+# {0} = victim player name
+# {1} = killer player name
+
+# {0} = victim player name
+death.cactus = {0} prøvde å klemme en kaktus
+
+# {0} = victim player name
+# {1} = killer player name
 
 # {0} = victim player name
 # {1} = killer player name
@@ -663,3 +668,8 @@ death.respawn.confirmed.time = Gjenoppstår om {0}s
 death.respawn.confirmed.waiting = Du vil gjenoppstå så snart som mulig...
 
 death.respawn.confirmed.waiting.flagDropped = Du vil gjenoppstå når flagget mistes...
+
+# {0} = A player name
+
+
+
