Update French translations

--- a/util/src/main/i18n/translations/command_fr_FR.properties
+++ b/util/src/main/i18n/translations/command_fr_FR.properties
@@ -24,6 +24,8 @@ command.onlyPlayers = Vous devez être un joueur pour utiliser cette commande.
 # {0} = module name (proper noun)
 command.moduleNotFound = Le module {0} n''est pas utilisé pour ce match
 
+command.matchNotStarted = Le match doit commencer avant d'utiliser cette commande.
+
 command.noTeams = Les équipes ne sont pas utilisées pour ce match
 
 command.noPlayers = Les joueurs ne peuvent pas rejoindre ce match
@@ -65,6 +67,26 @@ command.simplePageHeader = {0} de {1}
 # {0} = page number
 # {1} = total number of pages
 command.invalidPage = Il n''existe pas de page {0}. Les numéros des pages vont de 1 à {1}.
+
+command.conditionUnmet = Condition non satisfaite
+
+command.nextMode = Prochain mode\:
+
+command.modesPushed = Les modes affectés ont été poussés
+
+# time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = vers l'avant
+
+# time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = reculer
+
+# amount of time a mode was pushed (e.g. by 1:00)
+
+# {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} va commencer dans
+
+# amount of time remaining (e.g. 1:00 left)
+command.timeLeft = restant
 
 # {0} = number of players online
 command.list.online = Joueurs connectés \: {0}
