--- a/util/src/main/i18n/translations/command_es_CL.properties
+++ b/util/src/main/i18n/translations/command_es_CL.properties
@@ -24,6 +24,7 @@ command.onlyPlayers = Debes ser un jugador para ejecutar este comando.
 # {0} = module name (proper noun)
 command.moduleNotFound = El módulo {0} no está en uso esta partida
 
+
 command.noTeams = No hay equipos en esta partida
 
 command.noPlayers = Los jugadores no pueden unirse a esta partida
@@ -65,6 +66,19 @@ command.simplePageHeader = {0} de {1}
 # {0} = page number
 # {1} = total number of pages
 command.invalidPage = No hay página {0}. Éstas van desde la 1 a la {1}.
+
+
+
+
+# time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+
+# time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+
+# amount of time a mode was pushed (e.g. by 1:00)
+
+# {0} = mode name (e.g. GOLD, Glass Mode)
+
+# amount of time remaining (e.g. 1:00 left)
 
 # {0} = number of players online
 command.list.online = Conectados\: {0}
